# notes-rag

./: .env.example  .pre-commit-config.yaml  Makefile  alembic.ini  pyproject.toml
alembic/: env.py
docker/: Dockerfile  docker-compose.yaml
src/notes_rag/: config.py  models.py
src/notes_rag/api/: main.py  prompt.py  retriever.py
src/notes_rag/api/routes/: health.py  query.py
src/notes_rag/db/: connection.py
src/notes_rag/db/migrations/: env.py
src/notes_rag/db/migrations/versions/: 001_init.sql
src/notes_rag/ingest/: chunker.py  embedder.py  loader.py  run.py  store.py
tests/: conftest.py  test_chunker.py
